# task-maker-rust

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  crates.js  help.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.config/: nextest.toml
task-maker/: Cargo.toml
task-maker-async/: Cargo.toml
task-maker-async/src/: client.rs  dag.rs  error.rs  file_set.rs  lib.rs  server.rs  store.rs  worker.rs
task-maker-cache/: Cargo.toml
task-maker-cache/src/: entry.rs  key.rs  lib.rs  storage.rs
task-maker-dag/: Cargo.toml
task-maker-dag/src/: dag.rs  execution.rs  execution_group.rs  file.rs  lib.rs  signals.rs
task-maker-diagnostics/: Cargo.toml
task-maker-diagnostics/src/: lib.rs  span.rs
task-maker-exec/: Cargo.toml  build.rs
task-maker-exec/src/: channel.rs  check_dag.rs  client.rs  detect_exe.rs  executor.rs  find_tools.rs  lib.rs  proto.rs  sandbox.rs  sandbox_runner.rs  scheduler.rs  signals.rs  worker.rs  worker_manager.rs
task-maker-exec/src/execution_unit/: mod.rs  sandbox.rs  typst.rs
task-maker-exec/src/executors/: local_executor.rs  mod.rs  remote_executor.rs
task-maker-exec/src/sandbox/: mod.rs  sandbox.rs  typst.rs
task-maker-exec/src/worker/: controller.rs  mod.rs
task-maker-exec/tests/: tmbox.rs
task-maker-format/: Cargo.toml  askama.toml
task-maker-format/src/: detect_format.rs  lib.rs  sanity_checks.rs  solution.rs  source_file.rs  tag.rs  task_format.rs  testcase_score_status.rs
task-maker-format/src/ioi/: curses_ui.rs  dag.rs  finish_ui.rs  mod.rs  print.rs  sanity_checks.rs  tag.rs  task_info.rs  ui_state.rs
task-maker-format/src/ioi/dag/: checker.rs  input_generator.rs  input_validator.rs  mod.rs  output_generator.rs  task_type.rs
task-maker-format/src/ioi/format/: mod.rs
task-maker-format/src/ioi/sanity_checks/: att.rs  checker.rs  io.rs  mod.rs  sol.rs  statement.rs  subtasks.rs  task.rs
task-maker-format/src/ioi/statement/: asy.rs  booklet.rs  mod.rs  statement.rs
task-maker-format/src/terry/: curses_ui.rs  finish_ui.rs  mod.rs  task_info.rs  ui_state.rs
task-maker-format/src/terry/dag/: mod.rs
task-maker-format/src/terry/format/: mod.rs
task-maker-format/src/terry/sanity_checks/: checker.rs  mod.rs  statement.rs  task.rs
task-maker-format/src/terry/statement/: mod.rs
task-maker-format/src/ui/: curses.rs  json.rs  mod.rs  print.rs  raw.rs  silent.rs  ui_message.rs
task-maker-format/tests/: ioi_sanity_checks.rs  ioi_task_clean.rs  ioi_task_execute.rs  ioi_ui_state.rs  score_manager.rs  utils.rs
task-maker-iospec/: Cargo.toml
task-maker-iospec/src/: lib.rs
task-maker-iospec/src/assets/: IOSPEC.sample  iolib.hpp  sample.checker.cpp  sample.generator.cpp  sample.validator.cpp
task-maker-iospec/src/lang/: c.rs  clike.rs  cpp.rs  cpp_lib.rs  mod.rs
task-maker-iospec/src/share/: dgns.rs  ir.rs  mod.rs
task-maker-iospec/src/share/compile/: env.rs  mod.rs  traits.rs  util.rs
task-maker-iospec/src/share/run/: alloc.rs  ctx.rs  io.rs  mod.rs  state.rs  traits.rs
task-maker-iospec/src/spec/: atom_ty.rs  cfg_expr.rs  data_def_expr.rs  data_var.rs  expr.rs  expr_ty.rs  meta_stmt.rs  mod.rs  name.rs  range.rs  root.rs  stmt.rs  stmt_block.rs  var.rs
task-maker-iospec/src/spec/attr/: root.rs
task-maker-iospec/src/spec/attr_kind/: cfg.rs
task-maker-iospec/src/spec/expr/: mod.rs
task-maker-iospec/src/spec/expr_kind/: lit.rs  mod.rs  mul.rs  paren.rs  rel.rs  subscript.rs  sum.rs
task-maker-iospec/src/spec/meta_stmt/: mod.rs
task-maker-iospec/src/spec/meta_stmt_kind/: call.rs  mod.rs  resize.rs  set.rs
task-maker-iospec/src/spec/stmt/: mod.rs  root.rs
task-maker-iospec/src/spec/stmt_kind/: check.rs  for_loop.rs  if_stmt.rs  item.rs  mod.rs
task-maker-iospec/src/tools/: iospec_check.rs  iospec_gen.rs  iospec_gen_all.rs  mod.rs  share.rs
task-maker-iospec/tests/: run_all.rs
task-maker-iospec/tests/goldenfiles/atomic_types/: grader.c  grader.cpp  grader.inspect  main.c  main.cpp  main.inspect  solution.c  solution.cpp  support.cpp  template.c  template.cpp  valid.c.output  valid.cpp.output  valid.cpp.output.check.stderr
task-maker-iospec/tests/goldenfiles/compilation_errors/: undefined_var.iospec.check.stderr
task-maker-iospec/tests/goldenfiles/segtree/: IOSPEC  grader.c  grader.inspect  main.c  support.cpp  template.c
task-maker-iospec/tests/goldenfiles/triangle/: grader.c  grader.cpp  main.c  main.inspect  support.cpp
task-maker-iospec/tests/goldenfiles/weighted_graph/: IOSPEC  grader.c  grader.cpp  grader.inspect  main.c  main.inspect  support.cpp  template.c  template.cpp  valid1.c.output
task-maker-iospec/tests/segtree/: main.cpp  main.iolib.hpp  support.cpp
task-maker-iospec/tests/triangle/: main.c  main.iolib.hpp  support.cpp
task-maker-iospec/tests/weighted_graph/: main.cpp  main.iolib.hpp  main.parser.cpp  main.tex  support.cpp  valid1.c.output  valid1.input
task-maker-lang/: Cargo.toml
task-maker-lang/src/: grader_map.rs  language.rs  lib.rs  source_file.rs
task-maker-lang/src/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  pascal.rs  python.rs  rust.rs  shell.rs
task-maker-store/: Cargo.toml
task-maker-store/src/: index.rs  lib.rs  read_file_iterator.rs
task-maker-test/: Cargo.toml  README.md  build.rs
task-maker-test/src/: fifo.rs  lib.rs  sandbox.rs  test_interface.rs
task-maker-test/task-maker-test-sandbox/: Cargo.toml
task-maker-test/task-maker-test-sandbox/src/: main.rs
task-maker-test/tasks/communication/: task.yaml
task-maker-test/tasks/with_checker/: task.yaml
task-maker-test/tests/: classic.rs  communication.rs  invalid_copy.rs  missing_shebang.rs  with_bugged_checker.rs  with_bugged_gen.rs  with_bugged_sol.rs  with_bugged_val.rs  with_checker.rs  with_invalid_shebang.rs  with_stdio.rs  without_gen.rs  without_st.rs
task-maker/src/: evaluation.rs  main.rs  opt.rs  source_file.rs
task-maker/src/languages/: mod.rs  python.rs  shell.rs
task-maker/src/score_types/: min.rs
task-maker/src/task_types/: common.rs  mod.rs
task-maker/src/ui/: mod.rs
(+785 files in other folders)
