[workspace]

members = ["task-maker-*"]

[package]
name = "task-maker-rust"
version = "0.5.10"
description = "Tool for building tasks for informatics competitions, with support for cache, distributed computations and more"
readme = "README.md"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"
documentation = "https://edomora97.github.io/task-maker-rust/"
repository = "https://github.com/edomora97/task-maker-rust"
license = "MPL-2.0"
default-run = "task-maker"

[package.metadata.deb]
extended-description = "Tool for building tasks for informatics competitions, with support for cache, distributed computations and more"
assets = [
    # main executables
    ["target/release/task-maker", "usr/bin/task-maker-rust", "755"],
    ["target/release/task-maker-tools", "usr/bin/task-maker-tools", "755"],
    # autocompletion files
    ["target/autocompletion/task-maker-rust.bash", "etc/bash_completion.d/task-maker-rust", "644"],
    ["target/autocompletion/_task-maker-rust", "usr/share/zsh/vendor-completions/_task-maker-rust", "644"],
    ["target/autocompletion/task-maker-rust.fish", "usr/share/fish/completions/task-maker-rust.fish", "644"],
    ["target/autocompletion/task-maker-tools.bash", "etc/bash_completion.d/task-maker-tools", "644"],
    ["target/autocompletion/_task-maker-tools", "usr/share/zsh/vendor-completions/_task-maker-tools", "644"],
    ["target/autocompletion/task-maker-tools.fish", "usr/share/fish/completions/task-maker-tools.fish", "644"],
    # runtime required data
    ["data/**/*", "usr/share/task-maker-rust/", "755"],
    # vim syntax highlight
    ["tools/vim/ftdetect/cases_gen.vim", "usr/share/vim/vimfiles/ftdetect/cases_gen.vim", "644"],
    ["tools/vim/syntax/cases_gen.vim", "usr/share/vim/vimfiles/syntax/cases_gen.vim", "644"],
]

[badges]
github = { repository = "edomora97/task-maker-rust", workflow = "Rust" }

[dependencies]
task-maker-dag = { path = "./task-maker-dag" }
task-maker-store = { path = "./task-maker-store" }
task-maker-cache = { path = "./task-maker-cache" }
task-maker-exec = { path = "./task-maker-exec" }
task-maker-lang = { path = "./task-maker-lang" } # needed only by typescriptify
task-maker-format = { path = "./task-maker-format" }

# Logging and setting up the global logger
log = "0.4"
env_logger = "0.10"
# Argument parsing
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
num_cpus = "1.10"
# Better stacktraces for panics
better-panic = "0.3"
# Worker and client name
whoami = "1.4"
# Cross-platform cache directory
directories = "5.0"
# Generic error utilities
anyhow = { version = "1.0", features = ["backtrace"] }
# Message serialization for UI/sandbox/...
serde = "1.0"
serde_json = "1.0"
# Sandbox implementation for --sandbox
tabox = "1"
# Signal handler for ^C
ctrlc = "3.3"
# Global constants
lazy_static = "1.4"
# General iterator utilities
itertools = "0.10"
# Iterate recursively the files in a directory (used for `task-maker-tools reset`)
walkdir = "2.3"
# defer! macro
scopeguard = "1.0"
# URL parsing for connecting to a remote server
url = "2.1"
# Temporary directory for sandboxes
tempfile = "3.3"
# Regex
regex = "1"
# setrlimit for setting unlimited stack for the checker in the fuzzer
rlimit = "0.9"
# Geenrating random numbers (the seed in find-bad-case tool)
fastrand = "1.8"
# Curses UI
tui = { version = "0.19", default-features = false, features = ["termion"] }

# Typescript definition generation
typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}

[dev-dependencies]
approx = "0.5"
# Resolve executable names in $PATH
which = "4.2"

[[bin]]
name = "task-maker"
path = "src/main.rs"

[[bin]]
name = "task-maker-tools"
path = "src/tools/main.rs"
