[workspace]

members = ["task-maker-*"]

[package]
name = "task-maker-rust"
version = "0.6.7"
description = "Tool for building tasks for informatics competitions, with support for cache, distributed computations and more"
readme = "README.md"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"
documentation = "https://olimpiadi-informatica.github.io/task-maker-rust/"
repository = "https://github.com/olimpiadi-informatica/task-maker-rust"
license = "MPL-2.0"
default-run = "task-maker"

[package.metadata.deb]
extended-description = "Tool for building tasks for informatics competitions, with support for cache, distributed computations and more"
assets = [
    # main executables
    ["target/release/task-maker", "usr/bin/task-maker-rust", "755"],
    ["target/release/task-maker-tools", "usr/bin/task-maker-tools", "755"],
    # autocompletion files
    ["target/autocompletion/task-maker-rust.bash", "etc/bash_completion.d/task-maker-rust", "644"],
    ["target/autocompletion/_task-maker-rust", "usr/share/zsh/vendor-completions/_task-maker-rust", "644"],
    ["target/autocompletion/task-maker-rust.fish", "usr/share/fish/completions/task-maker-rust.fish", "644"],
    ["target/autocompletion/task-maker-tools.bash", "etc/bash_completion.d/task-maker-tools", "644"],
    ["target/autocompletion/_task-maker-tools", "usr/share/zsh/vendor-completions/_task-maker-tools", "644"],
    ["target/autocompletion/task-maker-tools.fish", "usr/share/fish/completions/task-maker-tools.fish", "644"],
    # runtime required data
    ["data/**/*", "usr/share/task-maker-rust/", "755"],
    # vim syntax highlight
    ["tools/vim/ftdetect/cases_gen.vim", "usr/share/vim/vimfiles/ftdetect/cases_gen.vim", "644"],
    ["tools/vim/syntax/cases_gen.vim", "usr/share/vim/vimfiles/syntax/cases_gen.vim", "644"],
    # AppArmor profile for allowing user namespaces on Ubuntu 23.10+.
    ["tools/ubuntu/apparmor-task-maker-rust", "etc/apparmor.d/task-maker-rust", "644"]
]

[badges]
github = { repository = "olimpiadi-informatica/task-maker-rust", workflow = "Rust" }

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
askama = "0.11"
askama_derive = "0.11"
better-panic = "0.3"
bincode = "1.2"
blake3 = "1.3"
clap = "4.5"
clap_complete = "4.5"
colored = "2"
const_format = "0.2"
crossbeam-channel = "0.5.15"
ctrlc = "3.4"
derivative = "2.2"
directories = "5.0"
ductile = "0.3"
env_logger = "0.11"
fastrand = "2.3"
fslock = "0.2"
glob = "0.3"
inventory = "0.3.3"
itertools = "0.13"
lazy_static = "1.5"
log = "0.4"
mime_guess = "2.0"
nix = "0.29"
num_cpus = "1.10"
paste = "1.0.11"
pest = "2.8"
pest_derive = "2.1"
pretty_assertions = "1.2"
ratatui = { version = "0.28", default-features = false }
regex = "1"
rlimit = "0.10"
scopeguard = "1.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
speculoos = "0.11"
supports-color = "2"
tabox = "1"
tempfile = "3.19"
termcolor = "1"
termion = "4"
thiserror = "1.0"
unic = "0.9"
url = "2.5"
uuid = "1.16"
walkdir = "2.5"
which = "7.0"
whoami = "1.5"
wildmatch = "2.1.0"

typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs" }

[dependencies]
task-maker-dag = { path = "./task-maker-dag" }
task-maker-store = { path = "./task-maker-store" }
task-maker-cache = { path = "./task-maker-cache" }
task-maker-exec = { path = "./task-maker-exec" }
task-maker-lang = { path = "./task-maker-lang" } # needed only by typescriptify
task-maker-format = { path = "./task-maker-format" }

# Logging and setting up the global logger
log = { workspace = true }
env_logger = { workspace = true }
# Argument parsing
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
num_cpus = { workspace = true }
# Better stacktraces for panics
better-panic = { workspace = true }
# Worker and client name
whoami = { workspace = true }
# Cross-platform cache directory
directories = { workspace = true }
# Generic error utilities
anyhow = { workspace = true, features = ["backtrace"] }
# Message serialization for UI/sandbox/...
serde = { workspace = true }
serde_json = { workspace = true }
# Sandbox implementation for --sandbox
tabox = { workspace = true }
# Signal handler for ^C
ctrlc = { workspace = true }
# Global constants
lazy_static = { workspace = true }
# General iterator utilities
itertools = { workspace = true }
# Iterate recursively the files in a directory (used for `task-maker-tools reset`)
walkdir = { workspace = true }
# defer! macro
scopeguard = { workspace = true }
# URL parsing for connecting to a remote server
url = { workspace = true }
# Temporary directory for sandboxes
tempfile = { workspace = true }
# Regex
regex = { workspace = true }
# setrlimit for setting unlimited stack for the checker in the fuzzer
rlimit = { workspace = true }
# Geenrating random numbers (the seed in find-bad-case tool)
fastrand = { workspace = true }
# Curses UI
ratatui = { workspace = true, features = ["termion"] }

# Typescript definition generation
typescript-definitions = { workspace = true }
serde_yaml.workspace = true

[dev-dependencies]
approx = { workspace = true }
# Resolve executable names in $PATH
which = { workspace = true }

[[bin]]
name = "task-maker"
path = "src/main.rs"

[[bin]]
name = "task-maker-tools"
path = "src/tools/main.rs"
