[package]
name = "task-maker-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.27", features = ["full"] }
thiserror = "1.0"
serde =  { version = "1.0", features = ["derive"] }
task-maker-dag = { path = "../task-maker-dag" }
tokio-util = "0.6.9"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.18"
assert2 = "0.3.6"
blake3 = "1.3.1"
bincode = "1.3.3"
anyhow = "1.0.56"
uuid = { version = "0.8.2", features = ["v4"] }

[features]
