[package]
name = "task-maker-cache"
version = "0.4.1"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }
task-maker-store = { path = "../task-maker-store" }

# General iterator utilities
itertools = "0.8"
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
# Generic error utilities
failure = "0.1"
# Logging
log = "0.4"
# Checking assertions at compile time
static_assertions = "1.1"

[dev-dependencies]
tempdir = "0.3"