[package]
name = "task-maker-cache"
version = "0.5.9"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }
task-maker-store = { path = "../task-maker-store" }

# General iterator utilities
itertools = "0.10"
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
# Generic error utilities
anyhow = { version = "1.0", features = ["backtrace"] }
# Logging
log = "0.4"
# Compile time string format
const_format = "0.2"

[dev-dependencies]
tempfile = "3.3"
