[package]
name = "task-maker-cache"
version = "0.6.9"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }
task-maker-store = { path = "../task-maker-store" }

# General iterator utilities
itertools = { workspace = true }
# Serialization/Deserialization
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
# Generic error utilities
anyhow = { workspace = true, features = ["backtrace"] }
# Logging
log = { workspace = true }
# Compile time string format
const_format = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
