[package]
name = "task-maker-dag"
version = "0.5.5"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-store = { path = "../task-maker-store" }
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
# UUID generation
uuid = { version = "0.7", features = ["v4", "serde"] }
# Generic error utilities
anyhow = { version = "1.0", features = ["backtrace"] }
# Typescript definition generation
typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}

[dev-dependencies]
tempdir = "0.3"
approx = "0.3"