[package]
name = "task-maker-dag"
version = "0.6.8"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-store = { path = "../task-maker-store" }

# Serialization/Deserialization
serde = { workspace = true, features = ["derive"] }
# UUID generation
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
# Generic error utilities
anyhow = { workspace = true, features = ["backtrace"] }

[dev-dependencies]
tempfile = { workspace = true }
approx = { workspace = true }
