[package]
name = "task-maker-diagnostics"
version = "0.6.16"
edition = "2021"

[dependencies]
# Serialization/Deserialization
serde = { workspace = true, features = ["derive"] }
# Utilities for writing to the terminal with colors
colored = { workspace = true }
# Generic error utilities
anyhow = { workspace = true }
