[package]
name = "task-maker-exec"
version = "0.6.7"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }
task-maker-store = { path = "../task-maker-store" }
task-maker-cache = { path = "../task-maker-cache" }

# Generic error utilities
anyhow = { workspace = true, features = ["backtrace"] }
thiserror = { workspace = true }
# Serialization/Deserialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
# Logging
log = { workspace = true }
# UUID generation
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
# Temporary directory for sandboxes and FIFO directory
tempfile = { workspace = true }
# Resolve executable names in $PATH
which = { workspace = true }
# General iterator utilities
itertools = { workspace = true }
# defer! macro
scopeguard = { workspace = true }
# Sandbox
tabox = { workspace = true }
# For killing processes and making FIFOs
nix = { workspace = true }
# In-memory and remote channels
ductile = { workspace = true }
# Key Derivation Function from a password
blake3 = { workspace = true }
# Typescript definition generation
typescript-definitions = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
env_logger = { workspace = true }
