[package]
name = "task-maker-exec"
version = "0.6.17"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }
task-maker-store = { path = "../task-maker-store" }
task-maker-cache = { path = "../task-maker-cache" }

# Generic error utilities
anyhow = { workspace = true, features = ["backtrace"] }
thiserror = { workspace = true }
# Serialization/Deserialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
# Logging
log = { workspace = true }
# UUID generation
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
# Temporary directory for sandboxes and FIFO directory
tempfile = { workspace = true }
# Resolve executable names in $PATH
which = { workspace = true }
# General iterator utilities
itertools = { workspace = true }
# defer! macro
scopeguard = { workspace = true }
# Sandbox
tabox = { workspace = true }
# For killing processes and making FIFOs
nix = { workspace = true }
# In-memory and remote channels
ductile = { workspace = true }
# Key Derivation Function from a password
blake3 = { workspace = true }
crossbeam-channel = { workspace = true }
typst = "0.13.1"
typst-kit = "0.13.1"
time = "0.3.41"
typst-pdf = "0.13.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
zune-inflate = "0.2.54"
tar = "0.4.44"

[dev-dependencies]
pretty_assertions = { workspace = true }
env_logger = { workspace = true }
