[package]
name = "task-maker-format"
version = "0.6.3"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }
task-maker-lang = { path = "../task-maker-lang" }
task-maker-exec = { path = "../task-maker-exec" }
task-maker-diagnostics = { path = "../task-maker-diagnostics" }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Generic error utilities
anyhow = { version = "1.0", features = ["backtrace"] }
# General iterator utilities
itertools = "0.10"
# Utilities for writing to the terminal with colors
termcolor = "1"
# Checks if the terminal supports the colors
supports-color = "2"
# Logging
log = "0.4"
# Globbing files
glob = "0.3"
# Text parser for parsing the gen/GEN file
pest = "2.1"
pest_derive = "2.1"
# Curses UI
ratatui = { version = "0.28", default-features = false, features = ["termion"] }
termion = "4"
# Global constants
lazy_static = "1.3"
# Checking equalness between floats
approx = "0.5"
# Regular expressions
regex = "1"
# File templating (for building statement tex file)
askama = "0.11"
askama_derive = "0.11"
# Detecting the content type of a file
mime_guess = "2.0"
# Geenrating random numbers (the seed in terry)
fastrand = "1.8"
# Split command line arguments
shell-words = "1.1"
# Nicer derive macros
derivative = "2.2"
# For sending ^C to the process
nix = "0.29"
# Typescript definition generation
typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}
# Unicode for subtask names
unic = "0.9"
# Wildcard match for subtask names.
wildmatch = "2.1.0"
# Plugin system for the sanity checks.
inventory = "0.3.3"
# For the plugin system.
paste = "1.0.11"
# Hashing function
blake3 = "1.3"

[dev-dependencies]
tempfile = "3.3"
pretty_assertions = "1.2"
# assert_that! macro
speculoos = "0.11"
