[package]
name = "task-maker-format"
version = "0.6.19"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }
task-maker-lang = { path = "../task-maker-lang" }
task-maker-exec = { path = "../task-maker-exec" }
task-maker-diagnostics = { path = "../task-maker-diagnostics" }

# Serialization/Deserialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
# Generic error utilities
anyhow = { workspace = true, features = ["backtrace"] }
# General iterator utilities
itertools = { workspace = true }
# Utilities for writing to the terminal with colors
termcolor = { workspace = true }
# Checks if the terminal supports the colors
supports-color = { workspace = true }
# Logging
log = { workspace = true }
# Globbing files
glob = { workspace = true }
# Text parser for parsing the gen/GEN file
pest = { workspace = true }
pest_derive = { workspace = true }
# Curses UI
ratatui = { workspace = true, features = ["termion"] }
termion = { workspace = true }
# Global constants
lazy_static = { workspace = true }
# Checking equalness between floats
approx = { workspace = true }
# Regular expressions
regex = { workspace = true }
# File templating (for building statement tex file)
askama = { workspace = true }
askama_derive = { workspace = true }
# Detecting the content type of a file
mime_guess = { workspace = true }
# Geenrating random numbers (the seed in terry)
fastrand = { workspace = true }
# Split command line arguments
shell-words = { workspace = true }
# Nicer derive macros
derivative = { workspace = true }
# For sending ^C to the process
nix = { workspace = true }
# Unicode for subtask names
unic = { workspace = true }
# Wildcard match for subtask names.
wildmatch = { workspace = true }
# Plugin system for the sanity checks.
inventory = { workspace = true }
# For the plugin system.
paste = { workspace = true }
# Hashing function
blake3 = { workspace = true }
locale-codes = "0.3.0"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
# assert_that! macro
speculoos = { workspace = true }
