[package]
name = "task-maker-lang"
version = "0.4.4"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive", "rc"] }
# Regular expressions
regex = "1"
# Generic error utilities
anyhow = { version = "1.0", features = ["backtrace"] }
# Global constants
lazy_static = "1.3"
# Resolve executable names in $PATH
which = "2.0"
# Split command line arguments
shell-words = "0.1"
# Typescript definition generation
typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}

[dev-dependencies]
task-maker-exec = { path = "../task-maker-exec" }
tempdir = "0.3"
# assert_that! macro
spectral = "0.6"
tabox = "0.1"