[package]
name = "task-maker-lang"
version = "0.6.2"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive", "rc"] }
# Regular expressions
regex = "1"
# Generic error utilities
anyhow = { version = "1.0", features = ["backtrace"] }
# Global constants
lazy_static = "1.3"
# Resolve executable names in $PATH
which = "4.2"
# Split command line arguments
shell-words = "1.1"
# Typescript definition generation
typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}

[dev-dependencies]
task-maker-exec = { path = "../task-maker-exec" }
tempfile = "3.3"
# assert_that! macro
speculoos = "0.11"
tabox = "1"
