[package]
name = "task-maker-lang"
version = "0.6.12"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
task-maker-dag = { path = "../task-maker-dag" }

# Serialization/Deserialization
serde = { workspace = true, features = ["derive", "rc"] }
# Regular expressions
regex = { workspace = true }
# Generic error utilities
anyhow = { workspace = true, features = ["backtrace"] }
# Global constants
lazy_static = { workspace = true }
# Resolve executable names in $PATH
which = { workspace = true }
# Split command line arguments
shell-words = { workspace = true }

[dev-dependencies]
task-maker-exec = { path = "../task-maker-exec" }

tempfile = { workspace = true }
# assert_that! macro
speculoos = { workspace = true }
tabox = { workspace = true }
