[package]
name = "task-maker-store"
version = "0.5.6"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
# Hashing function
blake2 = "0.8"
# Generic error utilities
anyhow = { version = "1.0", features = ["backtrace"] }
# File locking
fs2 = "0.4"
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
# Converting bytes into hex strings
hex = "0.3"
# Logging
log = "0.4"
# Temporary directory creation
tempdir = "0.3"
# Compile time string format
const_format = "0.2"

[dev-dependencies]
pretty_assertions = "1.2"
