[package]
name = "task-maker-store"
version = "0.5.10"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
# Hashing function
blake3 = "1.3"
# Generic error utilities
anyhow = { version = "1.0", features = ["backtrace"] }
# File locking
fslock = "0.2"
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
# Logging
log = "0.4"
# Temporary directory creation
tempfile = "3.3"
# Compile time string format
const_format = "0.2"

[dev-dependencies]
pretty_assertions = "1.2"
