[package]
name = "task-maker-store"
version = "0.6.10"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2021"

[dependencies]
# Hashing function
blake3 = { workspace = true }
# Generic error utilities
anyhow = { workspace = true, features = ["backtrace"] }
# File locking
fslock = { workspace = true }
# Serialization/Deserialization
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
# Logging
log = { workspace = true }
# Temporary directory creation
tempfile = { workspace = true }
# Compile time string format
const_format = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
