[package]
name = "task-maker-test"
version = "0.3.1"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
task-maker-format = { path = "../task-maker-format" }
task-maker-dag = { path = "../task-maker-dag" }
task-maker-rust = { path = ".." }
structopt = "0.3"
better-panic = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
approx = "0.3"
itertools = "0.8"
port_scanner = "0.1"
tempdir = "0.3"
failure = "0.1"
log = "0.4"
env_logger = "0.6"