[package]
name = "task-maker-rust"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
task-maker-store = { path = "../task-maker-store" }
task-maker-dag = { path = "../task-maker-dag" }
task-maker-exec = { path = "../task-maker-exec" }
task-maker-lang = { path = "../task-maker-lang" }
task-maker-format = { path = "../task-maker-format" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.7", features = ["v4", "serde"] }
byteorder = "1"
failure = "0.1"
log = "0.4"
env_logger = "0.6"
tempdir = "0.3"
boxfnonce = "0.1"
structopt = "0.2"
itertools = "0.8"
tui = "0.5"
termion = "1.5"

[dev-dependencies]
pretty_assertions = "0.6"

[[bin]]
name = "task-maker"
path = "src/main.rs"
